feat: change embedding technique entirely so that it supports mp3
